FIXED fdroidPrep.sh